--- a/deuxieme.html
+++ b/deuxieme.html
@@ -5,10 +5,12 @@
     <head>
         <title>deuxieme page</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="css/style.css">
     </head>
 
     <body>
        <p>bienvenue sur ma deuxieme page</p>
+       <h1>Lol</h1>
     </body>
 
 </html>
