--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
 <html lang="fr">
 
     <head>
-        <title>Permière page</title>
+        <title>Bienvenue les amis !</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="css/style.css">
+
+        
     </head>
 
     <body>
-        <h1>Titre de ma première page</h1>
+        <h1>Bienvenue les amis !</h1>
+
+        <hr>
+
         <p><em>Voici un premier paragraphe qui va décrire un peu le contenu de mon site web.</em></p>
         <h3>Présentation du contenu</h3>
         <p>Nous avons voir les éléments suivants :</p>
